fixed cart alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -142,7 +142,7 @@ width: 100%;
   font-size: 20px;
 }
 .hero-banner-container button{
-   border-radius: 15px;
+  border-radius: 15px;
   padding: 10px 16px;
   background-color: #f02d34;
   color: white;
@@ -174,20 +174,20 @@ width: 100%;
 
 
 .desc{
-position: absolute;
-right: 10%;
-bottom: 5%;
-width: 300px;
-line-height: 1.3;
-display: flex;
-flex-direction: column;
- color: #324d67;
+  position: absolute;
+  right: 10%;
+  bottom: 5%;
+  width: 300px;
+  line-height: 1.3;
+  display: flex;
+  flex-direction: column;
+  color: #324d67;
 
 }
 .desc p{
   color: #5f5f5f;
   font-weight: 100;
-text-align: end;
+  text-align: end;
 }
 .desc h5{
   margin-bottom: 12px;
@@ -199,7 +199,7 @@ text-align: end;
 .products-heading{
   text-align: center;
   margin: 40px 0px;
- color: #324d67;
+  color: #324d67;
 
 }
 .products-heading h2{
@@ -248,8 +248,11 @@ text-align: end;
   position: absolute;
   /* top: -35%;
   left: 8%; */
-  top: -25%;
-  left: 25%;
+  /* top: -25%;
+  left: 25%; */
+  top: -12%;
+  left: 26%;
+  width: 32%;
 }
 .banner-desc .right{
   line-height: 1.4;
@@ -337,13 +340,13 @@ text-align: end;
 .product-container{
   margin-top: 15px;
   overflow: auto;
-max-height: 70vh;
-padding: 20px 10px;
+  max-height: 70vh;
+  padding: 20px 10px;
 }
 .product{
   display: flex;
- gap: 30px;
-  padding: 20px;
+  gap: 30px;
+  padding: 20px 0;
 }
 .product .cart-product-image{
   width:180px ;
@@ -649,7 +652,7 @@ margin-top: 160px;
     font-size: 45px;
   }
   .banner-desc .right p{
-    font-size: 18px;
+    font-size: 14px;
   }
   .banner-desc .right .company-desc{
     font-size: 14px;
